--- a/src/Backend/.env
+++ b/src/Backend/.env
@@ -1,7 +1,10 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASSWORD = password
-DB_NAME = ecommerce
+DB_HOST = sql5.freesqldatabase.com
+DB_USER = sql5760055
+DB_PASSWORD = zAmz3JK9JC
+DB_NAME = sql5760055
+DB_PORT=3306
+
+
 
 # const db = mysql.createConnection({
 #   host: "localhost",
