--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "Backend/package.json",
+      "src": "server/package.json",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["server/**"]
