--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,35 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/Backend/package.json",
+      "src": "src/Backend/server.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["server/**"]
+        "includeFiles": ["src/Backend/**"]
       }
     },
     {
       "src": "src/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "src/build"
       }
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "src/Backend/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/build/$1"
+    }
+  ],
+  "env": {
+    "DB_HOST": "@db_host",
+    "DB_USER": "@db_user",
+    "DB_PASSWORD": "@db_password",
+    "DB_NAME": "@db_name",
+    "DB_PORT": "@db_port"
+  }
 }
