--- a/Backend/.env
+++ b/Backend/.env
@@ -4,6 +4,12 @@ DB_PASSWORD = zAmz3JK9JC
 DB_NAME = sql5760055
 DB_PORT=3306
 
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = password
+DB_NAME = ecommerce
+DB_PORT=3306
+
 
 
 # const db = mysql.createConnection({
