--- a/server/.env
+++ b/server/.env
@@ -4,11 +4,11 @@ DB_PASSWORD = zAmz3JK9JC
 DB_NAME = sql5760055
 DB_PORT=3306
 
-DB_HOST = localhost
-DB_USER = root
-DB_PASSWORD = password
-DB_NAME = ecommerce
-DB_PORT=3306
+# DB_HOST = localhost
+# DB_USER = root
+# DB_PASSWORD = password
+# DB_NAME = ecommerce
+# DB_PORT=3306
 
 
 
